--- a/magic_recipe_server/config/production.yaml
+++ b/magic_recipe_server/config/production.yaml
@@ -7,7 +7,7 @@
 # Configuration for the main API server.
 apiServer:
   port: 8080
-  publicHost: api.examplepod.com
+  publicHost: serverpod-poc-1013500213689.us-central1.run.app
   publicPort: 443
   publicScheme: https
 
